add new  componet withe elastic service

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -3,14 +3,11 @@
         <i class="fa fa-tachometer" aria-hidden="true"></i>
         Monitoring Microservices
     </a>
-
-
-
     <div class="collapse navbar-collapse">
 
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="{{ 'Search'  }}">
-        </form>
+        <!--        <form class="form-inline my-2 my-lg-0">-->
+        <!--            <input class="form-control mr-sm-2" type="text" placeholder="{{ 'Search'  }}">-->
+        <!--        </form>-->
 
         <ul class="navbar-nav ml-auto">
 
